# kitten

./: .flake8  config.yaml  ladder.py  pyproject.toml  run.py  terran_builds.yml
MapAnalyzer/: Pather.py  constructs.py
bot/: botai_ext.py  consts.py  macro.py  main.py  pathing.py  state.py  unit_roles.py  unit_squad.py  unit_squads.py  workers_manager.py
bot/modules/: macro.py  map_scouter.py  pathing.py  terrain.py  unit_roles.py  workers.py
bot/squad_agent/: agent.py  base_agent.py  features.py  offline_agent.py  ppo_agent.py  random_agent.py  utils.py
bot/squad_agent/agents/: base_agent.py  dqn_agent.py  dqn_rainbow_agent.py  offline_agent.py  ppo_agent.py  random_agent.py
bot/squad_agent/architecture/: actor_critic.py  encoder.py  entity_encoder.py  spatial_encoder.py
bot/squad_agent/architecture/dqn/: dqn_model.py  model.py  replay_buffer.py
bot/squad_agent/architecture/dqn_rainbow/: replay_buffer.py
bot/squad_agent/architecture/encoding/: entity_encoder.py
bot/squad_agent/training_scripts/: ppo_trainer.py
notebooks/: SpatialVisuals.ipynb  TrainingAnalysis.ipynb
scripts/: aiarena_docker_trainer.py  ladder_zip.py
