[tool.poetry]
name = "kitten"
version = "0.1.0"
description = ""
authors = ["Tom Kerr <tomkerrdev@gmail.com>"]
readme = "README.md"
packages = [{include = "ares-sc2/src/ares"}]

[tool.poetry.dependencies]
ares-sc2 = { path = "ares-sc2", develop = false }
python = ">=3.11,<3.12"
pyyaml = "^6.0"
tqdm = "^4.64.1"
tensorboard = "^2.11.2"
filelock = "^3.9.0"
torch = "^2.0.1"
torchvision = "^0.15.0"
matplotlib = "^3.6.3"
ipython = "^8.8.0"
ipykernel = "^6.25.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
exclude = ["python-sc2", "MapAnalyzer", "run.py", "ladder.py"]

[[tool.mypy.overrides]]
module = [
  "MapAnalyzer.*",
  "run.py",
  "ladder.py"
]
ignore_errors = true

[tool.black]
extend-exclude = 'ares-sc2/*'

[tool.isort]
profile = "black"
skip_glob = ["ares-sc2/*"]
